Fix align logos

--- a/_assets/css/layout/_footer.scss
+++ b/_assets/css/layout/_footer.scss
@@ -46,12 +46,14 @@
   font-size: 24px;
   line-height: 30px;
   color: $white;
+}
+.social-logos {
   white-space: nowrap;
 }
 .social-links__item {
   margin-bottom: 28px;
   display: inline-block;
-  vertical-align: middle;
+  vertical-align: top;
 }
 .social-links__link {
   position: relative;
