--- a/_assets/css/media/_tablet.scss
+++ b/_assets/css/media/_tablet.scss
@@ -86,7 +86,7 @@
   .footer {
     padding: 50px 0 30px;
   }
-  .social-links {
+  .social-logos {
     white-space: normal;
   }
   .ai-main-banner {
